--- a/public/stylesheets/feed.css
+++ b/public/stylesheets/feed.css
@@ -1,11 +1,32 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: #fffcfc;
+
   box-sizing: border-box;
   font-family: "Gill Sans", "Gill Sans MT", "Myriad          Pro",
     "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
 }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  width: 100vw;
+}
+
+#content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item {
+  width: calc(33.33% - 20px);
+  margin: 10px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
 .navbar-brand {
   color: grey;
   transition: color 0.3s;
@@ -36,11 +57,13 @@ nav a {
   margin-top: 10px;
 }
 .container {
-  padding-top: 13vh;
-  width: 1400px;
+  padding-top: 6vh;
+  width: 100%;
   margin: auto;
-  columns: 6;
-  column-gap: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 0px;
 }
 .container .box {
   border-radius: 20px;
@@ -92,19 +115,19 @@ input {
 }
 
 @media (max-width: 1427px) {
-  .container {
+  #container {
     columns: 5;
     width: calc(100% - 40px);
   }
 }
 @media (max-width: 1200px) {
-  .container {
+  #container {
     columns: 4;
   }
 }
 
 @media (max-width: 1000px) {
-  .container {
+  #container {
     columns: 3;
   }
 
@@ -165,13 +188,13 @@ input {
 }
 
 @media (max-width: 786px) {
-  .container {
+  #container {
     columns: 2;
   }
 }
 
 @media (max-width: 480px) {
-  .container {
+  #container {
     columns: 1;
   }
 }
